--- a/src/pre-start/env/production.env
+++ b/src/pre-start/env/production.env
@@ -12,3 +12,6 @@ JET_LOGGER_MODE=FILE
 JET_LOGGER_FILEPATH=jet-logger.log
 JET_LOGGER_TIMESTAMP=TRUE
 JET_LOGGER_FORMAT=LINE
+
+# Picsum API
+PICSUM_API=https://picsum.photos/v2/list?page=1&limit=100
