--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
+    "axios": "^0.25.0",
     "command-line-args": "^5.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
     "jet-logger": "^1.0.6"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/command-line-args": "^5.2.0",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.12",
@@ -15,7 +18,7 @@
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
-  "name": "livechatserver",
+  "name": "gallery",
   "description": "",
   "version": "1.0.0",
   "main": "dist/index.js",
