--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
           "*": [
               "node_modules/*"
           ],
+          "@/*": [
+            "src/*"
+          ],
           "@server": [
             "src/server"
           ],
